# mysql_translate

./: .gitignore  Cargo.toml  readme.md
src/: database.rs  json_translator.rs  lib.rs  main.rs  prisma_translator.rs  session.rs  set_env_variables.rs  sql.rs  structure.rs
src/flags/: flag_parser.rs  mod.rs
src/functionality/: database.rs  mod.rs  session.rs  structure.rs
src/remotes/: sql.rs
src/translators/: behaviour.rs  json_translator.rs  mod.rs  prisma_translator.rs
src/translators/prisma/: data_source.rs  field.rs  generator.rs  mod.rs  model.rs  relation.rs  schema.rs  unique_flag.rs
src/ui/: behaviour.rs  mod.rs  terminal.rs
tests/: debug.rs
