[package]
name = "mysql_translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.3"
dotenvy = "0.15.7"
mysql = "23.0.1"
serde = {version = "1.0.157", features =  ["derive"] }
serde_json = "1.0.94"
